--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@ h2 {
 	<span class="instruction-text"> Prev/Next Chapter</span>
 </div>
 
-<div>
+<!-- <div>
 	<h2>================</br>In Memory of KAZ</br>================</h2>
-</div>
+</div> -->
 
 <div class="content"><div class="block" data-fx="1">
 	{% for chapter in site.gamble %}
