--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ h2 {
 
 </style>
 <div class="container loading">
-</br><h1>Kakegurui Archives</h1></br>
+</br><h1>kAkeGuRui ARcHiVes</h1></br>
 
 <div class="instructions">
 	<span class="arrow-key">&larr;</span> <span class="arrow-key up">&rarr;</span>
